start of the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.9)
-project(ft_ssl)
+project(ft_nm)
 
 set(CMAKE_C99_STANDARD 17)
 
@@ -11,11 +11,11 @@ File(GLOB_RECURSE SOURCE
         src/*.c
         includes/*.h)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "~/ft_ssl_md5")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "~/nm_otool")
 # Build executable
-add_executable(ft_ssl
+add_executable(ft_nm
         ${SOURCE})
 
 find_library(LIBFT ft libft)
-target_link_libraries(ft_ssl LINK_PUBLIC ${LIBFT})
+target_link_libraries(ft_nm LINK_PUBLIC ${LIBFT})
 
